sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: '<-' expected but ')' found.
for(i < (getNombreValeurs()))
                            ^AlgInsertionSort:26: error: illegal start of simple expression
}
^