sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

var i : Int = 0
var value : Int = 0;

for(i < (getNombreValeurs()))
{
value = getValeur(i);
var indiceInserer : Int = i;

while((indiceInserer>=0) & (value<=getValeur(indiceInserer)))
{setValeur(indiceInserer+1,getValeur(indiceInserer));
indiceInserer = indiceInserer-1;
}
setValeur(indiceInserer+1,value);
i=i+1;


 
}
	
	
	
	
}
 

